--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <script src="index.js"></script>
 </head>
 <body>
 
 <main>
     <div class="container">
-        <div class="container-pokemon">
-        <div class="pokemon">
+        <div class="container-pokemon" id="listaPokemon">
+        <!-- <div class="pokemon">
             <div class="pokemon-header">
                 <p id="" class="id-pokemon-fondo">#01</p>
                 <div class="img">
@@ -30,7 +31,7 @@
                     <p class="caracter">69kg</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         </div>
     </div>
 </main>
