--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="index.js"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="img">
+                <img src="imagenes/pokemon-title.png" alt="">
+            </div>
+        </nav>
+    </header>
 
 <main>
     <div class="container">
