--- a/index.html
+++ b/index.html
@@ -9,39 +9,45 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="img">
-                <img src="imagenes/pokemon-title.png" alt="">
+            <nav>
+                <div class="img-nav">
+                    <img src="imagenes/pokemon-title.png" alt="">
+                </div>
+            </nav>
+            <div class="fondo-container">
+                <img src="imagenes/background.webp" alt="" class="fondo fondo-computadora">
+                <img src="imagenes/background-min.webp" alt="" class="fondo fondo-celular">
             </div>
-        </nav>
     </header>
 
-<main>
-    <div class="container">
-        <div class="container-pokemon" id="listaPokemon">
-        <!-- <div class="pokemon">
-            <div class="pokemon-header">
-                <p id="" class="id-pokemon-fondo">#01</p>
-                <div class="img">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="">
-                </div>
-                <div class="descripcion">
-                    <div class="id-pokemon">#01</div>
-                    <h2 class="nombre">bulbasour</h2>
-                </div>
-                <div class="tipo">
-                    <p class="planta tipo">planta</p>
-                    <p class="veneno tipo">veneno</p>
-                </div>
-                <div class="caracteristicas">
-                    <p class="caracter">7M</p>
-                    <p class="caracter">69kg</p>
+    <main>
+        <div class="main">    
+            <div class="container">
+                <div class="container-pokemon" id="listaPokemon">
+                    <!-- <div class="pokemon">
+                        <div class="pokemon-header">
+                            <p id="" class="id-pokemon-fondo">#01</p>
+                            <div class="img">
+                                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="">
+                            </div>
+                            <div class="descripcion">
+                                <div class="id-pokemon">#01</div>
+                                <h2 class="nombre">bulbasour</h2>
+                            </div>
+                            <div class="tipo">
+                                <p class="planta tipo">planta</p>
+                                <p class="veneno tipo">veneno</p>
+                            </div>
+                            <div class="caracteristicas">
+                                <p class="caracter">7M</p>
+                                <p class="caracter">69kg</p>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
-        </div> -->
         </div>
-    </div>
-</main>
+    </main>
 
 
 </body>
