--- a/html/gen3.html
+++ b/html/gen3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../estilos/style.css">
     <script src="../js/gen3.js"></script>
     <script src="../js/browser.js"></script>
+    <script src="../js/filtro.js"></script>
 </head>
 <body>
     <header>
@@ -24,6 +25,11 @@
     <form id="searchForm">
         <label for="pokemonInput">Buscar Pokémon:</label>
         <input type="text" id="searchBar" placeholder="Ingrese el nombre o número">
+        <label for="tipoSelect">Filtrar por tipo:</label>
+        <select id="tipoSelect">
+        <option value="">Todos los tipos</option>
+        </select>
+        
     </form>
     
     <main>
