--- a/html/gen6.html
+++ b/html/gen6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon - Sexta Generacion</title>
     <link rel="stylesheet" href="../estilos/style.css">
-    <script src="../js/gen6.js"></script>
+    <link rel="icon" href="../imagenes/favicon.jpg">
 </head>
 <body>
     <header>
