--- a/html/gen9.html
+++ b/html/gen9.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon - Novena Generacion</title>
     <link rel="stylesheet" href="../estilos/style.css">
-    <script src="../js/gen9.js"></script>
+    <link rel="icon" href="../imagenes/favicon.jpg">
 </head>
 <body>
     <header>
